fix: suppress duplicate Agent section in toolbar dropdown for Copilot
Copilot CLI reads our agent definition files from ~/.copilot/agents/ and
advertises them as a config option (label "Agent", values = agent slugs)
in session/new. This caused a second "Agent" separator to appear in the
toolbar dropdown alongside the hardcoded one from addAgentSelectionSection.

Fix: extend filterSessionOptionsStatic with a third agentSlugs parameter.
An option is filtered out when its values are a subset of the known agent
slugs (same pattern as the existing model deduplication logic). listSessionOptions
now computes agent slugs from getAvailableAgents() and passes them through.

Also fix get(0) → getFirst() warnings introduced while touching the test
file, and add assertNotNull guard for the nullable labels map access.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>